* Fix top menu display issue on IE6. (1936) * [FS#642] and [FS#652] Make correct container icons show when doc tree is initially shown/refreshed. (1929)
merge -r1928:1931 http://svn1.cvsdude.com/rethrash/tattoo/tattoo/branches/garryn/trunk 
    U  /manager/media/style/MODxLight/style.css
    U  /manager/frames/nodes.php
    Merge complete.
    ===== File Statistics: =====
    Updated: 2

--- a/manager/media/style/MODxLight/style.css
+++ b/manager/media/style/MODxLight/style.css
@@ -714,7 +714,6 @@ ul#nav {
     text-decoration: none;
     white-space: nowrap;
     cursor: hand;
-    display: block;
     line-height: 25px;
     overflow: hidden;
     padding: 0 15px;
